data/all_generated_tests/raw_wast_tests/br_ImproperFunctionCallorReturnHandling_891.wast
;; 2. **Backward Branch with Loop in Function Return:**    - Description: Implement a function containing a loop where the `br` instruction is used to branch back to the beginning of the loop. Ensure that the loop returns a value after breaking out of the loop using `br`.    - Constraint: This test checks if the `br` handles the backward branch correctly within the loop and manages the return value of the function.

(assert_invalid
  (module
    (func $br_in_loop_return
      (block (result i32)
        (loop $loop (result i32)
          (i32.const 42)
          (br 1)
        )
        (i32.const 0)
      )
      (return)
    )
  )
  "type mismatch"
)